--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -1,13 +1,11 @@
-
-
-.col-1 {
-@media screen and (min-width: 320px) and (max-width: 480px) {
+.dashboard {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
 display: flex;
 flex-direction: column;
 align-items: center;
 justify-content: center; 
 }
-@media screen and (min-width: 481px) and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1000px) {
 display: flex;
 flex-direction: column;
 align-items: center;
@@ -15,6 +13,75 @@ justify-content: center;
   }
 display: flex;
 flex-direction: row;
+align-items: center;
+justify-content: space-between;
+}
+
+
+.col-1-1 {
+@media screen and (min-width: 320px) and (max-width: 480px) {
+white-space: nowrap;
+overflow-x: scroll;
+overflow-y: hidden;
+width: 400px;
+height: 200px;
+display: flex;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+@media screen and (min-width: 481px) and (max-width: 768px) {
+white-space: nowrap;
+overflow-x: scroll;
+overflow-y: hidden;
+width: 600px;
+height: 200px;
+display: flex;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+  }  
+white-space: nowrap;
+overflow-x: scroll;
+overflow-y: hidden;
+width: 750px;
+height: 200px;
+display: flex;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.col-1-1::-webkit-scrollbar {
+  display: none;
+}
+
+.col-1-2 {
+@media screen and (min-width: 320px) and (max-width: 480px) {
+margin-top: 10px;
+}
+@media screen and (min-width: 481px) and (max-width: 768px) {
+margin-top: 20px;  
+}
+margin-top: 20px;
+}
+
+
+
+.col-2-1 {
+@media screen and (min-width: 320px) and (max-width: 767px) {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center; 
+width: 400px;
+}
+@media screen and (min-width: 768px) and (max-width: 1000px) {
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: space-evenly;
+width: 750px;
+  }
+display: flex;
+flex-direction: column;
 align-items: center;
 justify-content: space-evenly;
 }
