--- a/src/components/charts/BarChart.scss
+++ b/src/components/charts/BarChart.scss
@@ -1,12 +1,12 @@
-.column{
+.barChart {
   @media screen and (min-width: 320px) and (max-width: 767px) {
 width: 400px;
-margin-top: 0px;
+height: 400px;
 }
 @media screen and (min-width: 768px) and (max-width: 1000px) {
-width: 350px;
-margin-top: 20px;
+width: 750px;
+height: 400px;
 }
-width: 400px;
-margin-top: 30px;
+width: 750px;
+height: 400px;
 }
