--- a/src/components/charts/PieChart.scss
+++ b/src/components/charts/PieChart.scss
@@ -1,6 +1,7 @@
 .pie {
   @media screen and (min-width: 320px) and (max-width: 767px) {
 width: 400px;
+height: 250px;
 margin-top: 10px;
 margin-bottom: 10px;
 margin-right: 10px;
@@ -8,10 +9,16 @@ margin-left: 10px;
 }
 @media screen and (min-width: 768px) and (max-width: 1000px) {
 width: 350px;
+height: 230px;
+margin-top: 30px;
+margin-right: 10px;
+margin-left: 10px;
 }
 width: 400px;
+height: 250px;
 margin-top: -40px;
 margin-bottom: 10px;
 margin-right: 10px;
 margin-left: 10px;
+border-radius: 40px;
 }
