--- a/src/components/charts/StackedColumn.scss
+++ b/src/components/charts/StackedColumn.scss
@@ -1,12 +1,15 @@
-.column{
+.StackedColumn{
   @media screen and (min-width: 320px) and (max-width: 767px) {
 width: 400px;
-margin-top: 0px;
+margin-top: 20px;
+margin-bottom: 0px;
 }
 @media screen and (min-width: 768px) and (max-width: 1000px) {
 width: 350px;
-margin-top: 20px;
+margin-top: 0px;
+display: none;
 }
 width: 400px;
-margin-top: 30px;
+margin-top: -90px;
+margin-bottom: 70px;
 }
