--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -24,7 +24,7 @@ white-space: nowrap;
 overflow-x: scroll;
 overflow-y: hidden;
 width: 400px;
-height: 200px;
+height: 150px;
 display: flex;
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
@@ -34,7 +34,7 @@ white-space: nowrap;
 overflow-x: scroll;
 overflow-y: hidden;
 width: 600px;
-height: 200px;
+height: 150px;
 display: flex;
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
@@ -43,7 +43,7 @@ white-space: nowrap;
 overflow-x: scroll;
 overflow-y: hidden;
 width: 750px;
-height: 200px;
+height: 150px;
 display: flex;
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
@@ -53,12 +53,13 @@ display: flex;
   display: none;
 }
 
-.col-1-2 {
+.col-1-3 {
 @media screen and (min-width: 320px) and (max-width: 480px) {
 margin-top: 10px;
 }
 @media screen and (min-width: 481px) and (max-width: 768px) {
-margin-top: 20px;  
+margin-top: 20px;
+margin-bottom: 40px;
 }
 margin-top: 20px;
 }
@@ -77,7 +78,7 @@ width: 400px;
 display: flex;
 flex-direction: row;
 align-items: center;
-justify-content: space-evenly;
+justify-content: space-between;
 width: 750px;
   }
 display: flex;
@@ -85,3 +86,58 @@ flex-direction: column;
 align-items: center;
 justify-content: space-evenly;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
