--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -1,16 +1,26 @@
 .dashboard {
-  @media screen and (min-width: 320px) and (max-width: 767px) {
+  //small
+@media screen and (min-width: 320px) and (max-width: 576px) {
 display: flex;
 flex-direction: column;
 align-items: center;
 justify-content: center; 
 }
-@media screen and (min-width: 768px) and (max-width: 1000px) {
+// medium
+@media screen and (min-width: 577px) and (max-width: 768px) {
 display: flex;
 flex-direction: column;
 align-items: center;
-justify-content: center;  
-  }
+justify-content: center; 
+}
+//large
+@media screen and (min-width: 769px) and (max-width: 992px) {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center; 
+}
+//extra large
 display: flex;
 flex-direction: row;
 align-items: center;
@@ -28,6 +38,7 @@ height: 150px;
 display: flex;
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
+    margin-top: 20px;
 }
 @media screen and (min-width: 481px) and (max-width: 768px) {
 white-space: nowrap;
@@ -38,6 +49,7 @@ height: 150px;
 display: flex;
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
+  margin-top: 20px;
   }  
 white-space: nowrap;
 overflow-x: scroll;
@@ -47,6 +59,7 @@ height: 150px;
 display: flex;
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
+    margin-top: -100px;
 }
 
 .col-1-1::-webkit-scrollbar {
